--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -59,12 +59,12 @@
             android:src="@drawable/avatar" />
 
         <EditText
-            android:id="@+id/NameEditText"
+            android:id="@+id/fullname"
             android:layout_width="299dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:hint="your name here"
-            android:inputType="textEmailAddress" />
+            android:inputType="textPersonName" />
 
     </LinearLayout>
 
@@ -88,7 +88,7 @@
             android:src="@drawable/mail" />
 
         <EditText
-            android:id="@+id/emailEditText"
+            android:id="@+id/email"
             android:layout_width="299dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
@@ -118,7 +118,7 @@
             android:src="@drawable/padlock" />
 
         <EditText
-            android:id="@+id/repasswordEditText"
+            android:id="@+id/retypepassword"
             android:layout_width="299dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
@@ -148,7 +148,7 @@
             android:src="@drawable/padlock" />
 
         <EditText
-            android:id="@+id/passwordEditText"
+            android:id="@+id/password"
             android:layout_width="299dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
@@ -184,5 +184,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout"
         app:layout_constraintVertical_bias="1.0" />
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/progresslogin"
+        android:layout_width="match_parent"
+        android:layout_height="314dp"
+        android:layout_marginTop="220dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        android:visibility="gone"
+        app:lottie_rawRes="@raw/progressbar"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
