--- a/app/src/main/res/layout/activity_email_register.xml
+++ b/app/src/main/res/layout/activity_email_register.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EmailRegisterActivity">
+    tools:context=".EmailLoginActivity">
 
     <RelativeLayout
         android:id="@+id/relativeLayout"
